fixed overflow issue

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,7 +3,6 @@
 #app {
   max-width: 1280px;
   font-weight: normal;
-  overflow: hidden;
 }
 
 a,
